<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.whattoeat.WhatToEatFragment"
    android:columnCount="2"
    android:useDefaultMargins="true">

    <TextView
        android:id="@+id/genderLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/gender"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="173dp" />
    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:entries="@array/genders"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="173dp" />
    <TextView
    android:id="@+id/ageLabelTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:text="@string/age"
    android:textAppearance="?android:attr/textAppearanceMedium"
    tools:layout_editor_absoluteX="15dp"
    tools:layout_editor_absoluteY="173dp" />
    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:elevation="@dimen/elevation"
        android:hint="@string/enter_age"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/weightLabelTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/weight"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="173dp" />

    <EditText
        android:id="@+id/weightEditText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:elevation="@dimen/elevation"
        android:hint="@string/enter_weight"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="164dp" />
    <TextView
        android:id="@+id/heightLabelTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/height"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="108dp" />

    <EditText
        android:id="@+id/heightEditText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:elevation="@dimen/elevation"
        android:hint="@string/enter_height"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="99dp" />
    <TextView
        android:id="@+id/totalLabelTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/calories"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="254dp" />
    <TextView
        android:id="@+id/hbTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:background="@color/result_background"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="254dp" />
    <Button
        android:id="@+id/button_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:text="@string/calculate"
        android:background="@color/result_background"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#99000000"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="254dp" />
</GridLayout>
